--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,8 @@
-CC = gcc-9 -Os -fopenmp 
-#CFLAGS = -L/usr/local/sac/lib -lsac -lsacio -lm
-CFLAGS = -L./ -lsac -lsacio -lm
-CC_SO = gcc-9 -Os -fopenmp -shared -fPIC
+CC = gcc -Os -fopenmp 
+CFLAGS = -L/usr/local/sac/lib -lsac -lsacio -lm
 BIN = ../bin
 
 FDTCC: FDTCC.o sacio.o 
 	${CC} -o ${BIN}/$@ $^ ${CFLAGS}
-FDTCC.so: FCC.o sacio.o
-	${CC_SO} -o ${BIN}/$@ $^ ${CFLAGS}
 clean:
 	rm -f *.o
